# hala-pathtracer

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_CN.md  README_JP.md  README_KO.md  denoise.py
assets/: cornell-box.gltf  orthographic_camera.gltf
conf/: bedroom.yaml  car2.yaml  coffee.yaml  config.yaml  disney_test.yaml  dragon.yaml  orthographic_camera.yaml  teapot-full.yaml  tropical.yaml  veach_test.yaml
docs/: HOW_TO.md
shaders/: Cargo.toml  build.rs
shaders/src/: lib.rs  make_shaders.yaml
shaders/src/common/: common.glsl  intersection.glsl  sampling.glsl  tonemap.glsl  wltcRS.glsl
shaders/src/hala-pathtracer/: diffuse_bxdf_eval.rcall.glsl  diffuse_bxdf_sample.rcall.glsl  directional_light_sample.rcall.glsl  disney_bxdf_eval.rcall.glsl  disney_bxdf_sample.rcall.glsl  env_map_eval.rcall.glsl  env_map_sample.rcall.glsl  env_radiance.rcall.glsl  env_sky_eval.rcall.glsl  env_sky_sample.rcall.glsl  lights.rchit.glsl  lights.rint.glsl  orthographic_ray.rcall.glsl  pathtracer.rgen.glsl  pathtracer.rmiss.glsl  perspective_ray.rcall.glsl  point_light_sample.rcall.glsl  quad_light_sample.rcall.glsl  shadow_ray.rmiss.glsl  sphere_light_sample.rcall.glsl  spot_light_sample.rcall.glsl  triangles.rchit.glsl
shaders/src/hala-pathtracer/inc/: constants.glsl  env_map.glsl  global.glsl  lighting.glsl  rayload.glsl  types.glsl
shaders/src/hala-pathtracer/inc/bxdf/: disney.glsl  lambert.glsl  oren_nayar.glsl
shaders/src/hala-pathtracer/inc/light/: distant.glsl  point.glsl  quad.glsl  sphere.glsl  spot.glsl
src/: lib.rs
src/application/: mod.rs
src/config/: mod.rs  tracer.rs
