[package]
name = "hala-pathtracer"
version = "0.1.0"
edition = "2021"
description = "A path tracer renderer powered by hala-gfx."

[[bin]]
name = "hala-pathtracer"
test = false
bench = false

[dependencies]
hala-gfx = { path = "./hala-gfx" }
hala-renderer = { path = "./hala-renderer" }
shaders = { path = "./shaders" }

anyhow = { version = "1", default-features = false, features = ["backtrace"] }
time = { version = "0.3", default-features = false }
clap = { version = "4.4", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }
winit = { version = "0.29", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
glam = { version = "0", default-features = false, features = ["std"] }

log = { version = "0", default-features = false }
log4rs = {version = "1.2", default-features = false, features = [
    "gzip",
    "console_appender",
    "rolling_file_appender",
    "compound_policy",
    "fixed_window_roller",
    "size_trigger",
    "pattern_encoder"
]}
